# backend-api/src/models/user/vehicle.js
@@ -3,7 +3,7 @@ module.exports = (sequelize, DataTypes) => {
 
     var vehicle = sequelize.define('vehicle', {
         id: { type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true, allowNull: false },
-        vehicleUID: DataTypes.STRING
+        vin: DataTypes.STRING
     }, { 'freezeTableName': true, 'timestamps': false });
     return vehicle;
 };
