# backend-api/src/routes/vehicle.js
@@ -5,6 +5,5 @@ const { requireCarSubscription } = require('../utils/controllers');
 module.exports = (api, base_path) => {
     api.route(base_path + '/vehicle/subscribe').post(wrapAsync(Vehicle.subscribe));
     api.route(base_path + '/vehicle/unsubscribe').post(requireCarSubscription(), wrapAsync(Vehicle.unsubscribe));
-    api.route(base_path + '/vehicle/setCarState').post(requireCarSubscription(), wrapAsync(Vehicle.setCarState));
-    api.route(base_path + '/vehicle/setHeatingState').post(requireCarSubscription(), wrapAsync(Vehicle.setHeatingState));
+    api.route(base_path + '/vehicle/command/:commandName').post(requireCarSubscription(), wrapAsync(Vehicle.command));
 };
